# SubLens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PADDLEOCR_SETUP.md  README.md  SECURITY.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  cli.yml  docs.yml  release.yml
cli/: package.json  tsconfig.json
cli/src/: extract.ts  formats.ts  postprocess.ts  scene.ts
docs/: ARCHITECTURE.md  BUG_REPORT.md  CODE_REVIEW.md  DEVELOPER_GUIDE.md  PLANNING.md  README.md  UI_OPTIMIZATION.md  _sidebar.md  architecture.md  changelog.md  cli.md  developer-guide.md  file-naming-conventions.md  getting-started.md  index.html  index.md  package.json
docs/.vitepress/: config.ts
docs/api/: calibrator.md  commands.md  exporter.md  pipeline.md  scene-detect.md
docs/guide/: architecture.md  cli.md  export-formats.md  faq.md  first-extraction.md  getting-started.md  keyboard-shortcuts.md  ocr-engines.md  roi.md  troubleshooting.md
public/: logo-preview.html
src/: App.vue  main.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: paddle_ocr.py  scene_detect.py
src-tauri/src/: lib.rs  main.rs  main_cli.rs
src-tauri/src/commands/: export.rs  export_fmt.rs  export_formats.rs  ffmpeg_output.rs  file.rs  mod.rs  ocr.rs  ocr_engine.rs  scene.rs  system.rs  timestamp.rs  types.rs  utils.rs  video.rs
src-tauri/tests/: unit_tests.rs
src/components/: index.ts
src/composables/: Extractor.test.ts  Extractor.ts  Hotkeys.ts  Preprocessor.test.ts  index.ts  useBatchProcessor.ts  useExport.ts  useExtractor.ts  useFile.ts  useFileOperations.ts  useHotkeys.ts  useImagePreprocessor.test.ts  useImagePreprocessor.ts  useImagePreprocessor.util.test.ts  useKeyboardShortcuts.ts  useNotification.ts  useOCR.ts  useOCREngine.test.ts  useOCREngine.ts  useOCRTab.ts  usePlayer.ts  usePreprocessor.ts  useProgress.ts  useROI.ts  useSettings.ts  useSubtitleExtractor.test.ts  useSubtitleExtractor.ts  useSubtitleList.test.ts  useSubtitleList.ts  useSubtitleList.util.test.ts  useTheme.ts  useVideoPlayer.ts
src/core/: Calibrator.test.ts  Calibrator.ts  ConfidenceCalibrator.test.ts  ConfidenceCalibrator.ts  Exporter.test.ts  Exporter.ts  Pipeline.test.ts  Pipeline.ts  SceneDetect.test.ts  SceneDetect.ts  SceneDetector.ts  SubtitleExporter.ts  SubtitlePipeline.test.ts  SubtitlePipeline.ts  index.ts
src/stores/: project.ts  settings.ts  subtitle.ts
(+63 files in other folders)
