[package]
name = "sublens"
version = "3.5.1"
description = "SubLens - Professional Video OCR Subtitle Extraction Tool"
authors = ["Agions"]
license = "MIT"
repository = "https://github.com/Agions/SubLens"
edition = "2021"

[lib]
name = "sublens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
chrono = "0.4"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"  # For path validation in file commands
image = "0.25"  # For image processing in OCR

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2.0"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 16
strip = true
